--- a/app_template/docker/test/dockerfile
+++ b/app_template/docker/test/dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.11-slim AS build
 
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
 
 RUN apt-get update && \ 
    apt-get install -y libpq-dev gcc git
@@ -12,8 +12,7 @@ ENV PATH="/opt/venv/bin:$PATH"
 COPY requirements.txt requirements.txt
 
 RUN pip3 install --upgrade pip && \
-    pip3 install -r requirements.txt --no-cache-dir && \
-    pip3 cache purge
+    pip3 install -r requirements.txt --no-cache-dir
 
     
 FROM python:3.11-slim AS runtime
@@ -23,6 +22,5 @@ ENV PATH="/opt/venv/bin:$PATH"
 
 WORKDIR /home/app
 COPY . .
-EXPOSE 8000
 
-CMD [ "uvicorn", "app.main:app", "--port", "8000", "--host", "0.0.0.0" ]
+CMD [ "pytest" ]
